--- a/cart.html
+++ b/cart.html
@@ -205,24 +205,26 @@
                 <div class="modal-body">
                   <div class="container">
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
-                        checked>
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="botonTarjeta">
                       <label class="form-check-label" for="flexRadioDefault1">
                         Tarjeta de Crédito
                       </label>
                     </div>
                     <hr>
                   </div>
+
+                  <fieldset id="tarjeta">
+
                   <div class="container">
                     <div class="row">
                       <div class="col-9"></div>
                       <div class="col-6">
                         <p>Número de Tarjeta</p>
-                        <input class="form-control" type="number" aria-label="default input example">
+                        <input class="form-control" type="number" aria-label="default input example" id="numTarjeta" disabled>
                       </div>
                       <div class="col-4">
                         <p>Código de seg.</p>
-                        <input class="form-control" type="password" aria-label="default input example">
+                        <input class="form-control" type="password" aria-label="default input example" id="codSeg" disabled>
                       </div>
                     </div>
                   </div>
@@ -232,31 +234,38 @@
                       <div class="col-9"></div>
                       <div class="col-6">
                         <p>Vencimiento (MM-AA)</p>
-                        <input class="form-control" type="number" max="9999" min="0000"
-                          aria-label="default input example">
+                        <input class="form-control" type="number" max="9999" min="0000" aria-label="default input example" id="venc" disabled>
                       </div>
                     </div>
                   </div>
+
+                  </fieldset>
+
                   <br>
                   <div class="container">
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
-                        checked>
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="botonTransferencia">
                       <label class="form-check-label" for="flexRadioDefault1">
                         Transferencia bancaria
                       </label>
                     </div>
                     <hr>
                   </div>
+
+                  <fieldset id="transferencia">
+
                   <div class="container">
                     <div class="row">
                       <div class="col-9"></div>
                       <div class="col-6">
                         <p>Número de Cuenta</p>
-                        <input class="form-control" type="number" aria-label="default input example">
+                        <input class="form-control" type="number" aria-label="default input example" id="numCuenta" disabled>
                       </div>
                     </div>
                   </div>
+
+                  </fieldset>
+
                   <br>
 
 
@@ -272,7 +281,7 @@
         </div>
         <!--<button type="submit" class="botonsito btn btn-primary">Finalizar Compra</button>-->
         <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="submit">Finalizar compra</button>
+          <button class="btn btn-primary" type="submit" onchange="sumar()">Finalizar compra</button>
         </div>
       </form>
   </main>
