--- a/login.html
+++ b/login.html
@@ -33,6 +33,10 @@
           <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña" required>
           <label for="floatingPassword">Contraseña</label>
         </div>
+        <div class="form-floating">
+          <input type="email" class="form-control" id="email" placeholder="Ingrese su correo electrónico" required>
+          <label for="email">E-mail</label>
+        </div>
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me">
