--- a/my-profile.html
+++ b/my-profile.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -48,13 +48,54 @@
           </li>
         </ul>
       </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <p style="color:powderblue">Bienvenid@, <span id="usuario"></span>!</p>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+          <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+          <li><a class="dropdown-item" href="login.html" id="cierro">Cerrar sesion</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <h1>Perfil</h1>
+      <br>
+      <hr>
+      <br>
+      <form action="action_page.php" method="post">
+        <!--<div class="imgcontainer">
+          <img src="img_avatar2.png" alt="Avatar" class="avatar">
+        </div>-->
+      
+        <div class="container">
+          <label for="nombre"><b>Nombre*</b></label>
+          <input type="text" class="form-control" placeholder="Ingrese su nombre" name="nombre" required>
+          <br>
+          <label for="nombre2"><b>Segundo Nombre</b></label>
+          <input type="text" class="form-control" placeholder="Ingrese su segundo nombre" name="nombre2">
+          <br>
+          <label for="apellido"><b>Apellido*</b></label>
+          <input type="text" class="form-control" placeholder="Ingrese su apellido" name="apellido" required>
+          <br>
+          <label for="apellido2"><b>Segundo Apellido</b></label>
+          <input type="text" class="form-control" placeholder="Ingrese su segundo apellido" name="apellido2">
+          <br>
+          <label for="email"><b>E-mail*</b></label>
+          <input  id="Email" type="email" class="form-control" name="email" required>
+          <br>
+          <label for="telefono"><b>Teléfono de contacto</b></label>
+          <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" name="telefono">
+          <br>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Guardar cambios</button>
+          <label>
+            <input type="checkbox" checked="checked" name="remember"> Recuérdame
+          </label>
+        </div>
+      </form>
     </div>
   </main>
   <footer class="text-muted">
@@ -67,9 +108,9 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/my-profile.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="init.js"></script>
+  <script src="my-profile.js"></script>
 </body>
 
 </html>
